--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -6,8 +6,12 @@ sniproxy.postinst.debhelper
 sniproxy.postrm.debhelper
 sniproxy.prerm.debhelper
 sniproxy.substvars
-sniproxy/
+sniproxy
+sniproxy-dbg.debhelper.log
+sniproxy-dbg.substvars
+sniproxy-dbg
 stamp-autotools
 stamp-autotools-files
 stamp-makefile-build
 stamp-makefile-install
+tmp
