Revert "Require udns >= 0.4"
This reverts commit 1133ad91b491b4c7a2fa4e17bf48a410cd76ad4a.

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -6,12 +6,8 @@ sniproxy.postinst.debhelper
 sniproxy.postrm.debhelper
 sniproxy.prerm.debhelper
 sniproxy.substvars
-sniproxy
-sniproxy-dbg.debhelper.log
-sniproxy-dbg.substvars
-sniproxy-dbg
+sniproxy/
 stamp-autotools
 stamp-autotools-files
 stamp-makefile-build
 stamp-makefile-install
-tmp
