Test out of file descriptors case
Add fd_limit_test and an additional startup flag to sniproxy to specify
file descriptor limit. This flag will both facility testing and allow
users to tune sniproxy for their systems.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,7 +8,8 @@ TESTS = http_test \
         functional_test \
         bad_request_test \
         slow_client_test \
-        connection_reset_test
+        connection_reset_test \
+		fd_limit_test
 
 if DNS_ENABLED
   TESTS += config_test \
