Feature: bind source address
Add "source" option to listener configuration stanza.

Addresses feature requested in #26

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -25,6 +25,13 @@ listen 80 {
     # Fallback backend server to use if we can not parse the client request
     fallback localhost:8080
 
+    # Specify the source address for outgoing connections
+    # This address must be configured on the host
+    # NOTE: using this option prevents the operating system from selecting
+    # and source address and port optimally and may significantly reduce the
+    # maximum number of simultaneous connections possible.
+    source 192.0.2.10
+
     # Log the content of bad requests
     #bad_requests log
 
