--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - bash -c "cd tests && ./hostname_test valgrind --leak-check=full --error-exitcode=1"
   - bash -c "cd tests && ./slow_client_test valgrind --leak-check=full --error-exitcode=1"
   - bash -c "cd tests && ./wildcard_test valgrind --leak-check=full --error-exitcode=1"
-  - bash -c "cd tests && ./outbound_address_test valgrind --leak-check=full --error-exitcode=1"
+  - bash -c "cd tests && ./bind_source_test valgrind --leak-check=full --error-exitcode=1"
   - echo "Testing Debian package build"
   - dpkg-buildpackage
   - echo "Testing RPM package build"
