--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -30,6 +30,8 @@ listen 80 {
     # NOTE: using this option prevents the operating system from selecting
     # and source address and port optimally and may significantly reduce the
     # maximum number of simultaneous connections possible.
+    # Do not include a port in this address, otherwise you will be limited
+    # to a single connection to each backend server.
     source 192.0.2.10
 
     # Log the content of bad requests
