Correct comments in example configuration

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -61,16 +61,11 @@ listen [2001:0db8::10]:80 {
 listen unix:/var/run/proxy.sock {
     protocol tls alpn
     table alpn_protocol_hosts
-    # this will use default table
 }
 
 # named tables are defined with the table directive
 table http_hosts {
-    example.com 192.0.2.10:8001
-    example.net 192.0.2.10:8002
-    example.org 192.0.2.10:8003
-
-# Each table entry is composed of three parts:
+# Each table entry is composed of two parts:
 #
 # pattern:
 # 	valid Perl-compatible Regular Expression that matches the
@@ -86,13 +81,16 @@ table http_hosts {
 # pattern	target
 #.*\.itunes\.apple\.com$	*:443
 #.*	127.0.0.1:4443
+    example.com 192.0.2.10:8001
+    example.net 192.0.2.10:8002
+    example.org 192.0.2.10:8003
 }
 
 # named tables are defined with the table directive
 table https_hosts {
     # When proxying to local sockets you should use different tables since the
-    # local socket server most likely will not autodetect which protocol is
-    # being used
+    # local socket server most likely will not detect which protocol is being
+    # used
     example.org unix:/var/run/server.sock
 }
 
