--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,6 +8,7 @@ TESTS = http_test \
         functional_test \
         bad_request_test \
         slow_client_test \
+		reload_test \
         connection_reset_test \
 		bind_source_test \
 		fd_limit_test
