--- a/debian/sniproxy.conf
+++ b/debian/sniproxy.conf
@@ -12,7 +12,7 @@ error_log {
     syslog deamon
 
     # Alternatively we could log to file
-    #filepath /var/log/sniproxy.log
+    #filename /var/log/sniproxy/sniproxy.log
 
     # Control the verbosity of the log
     priority notice
@@ -24,11 +24,21 @@ listen 80 {
     table http_hosts
     # Fallback backend server to use if we can not parse the client request
     fallback localhost:8080
+
+    access_log {
+        filename /var/log/sniproxy/http_access.log
+        priority notice
+    }
 }
 
 listen 443 {
     proto tls
     table https_hosts
+
+    access_log {
+        filename /var/log/sniproxy/https_access.log
+        priority notice
+    }
 }
 
 # named tables are defined with the table directive
