--- a/debian/rules
+++ b/debian/rules
@@ -8,4 +8,6 @@ CDBS_BUILD_DEPENDS += , dh-autoreconf
 
 install/sniproxy::
 	install -D -m 644 debian/sniproxy.conf debian/sniproxy/etc/sniproxy.conf
+	install -D -m 644 debian/logrotate.conf debian/sniproxy/etc/logrotate.d/sniproxy.conf
+	install -d -m 644 -o daemon -g adm debian/sniproxy/var/log/sniproxy
 
