--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 install:
   - sudo apt-get update
-  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev libudns-dev cdbs dh-autoreconf valgrind apache2-utils rpm
+  - DEBIAN_FRONTEND=noninteractive sudo apt-get install -y libev-dev libpcre3-dev libudns-dev lintian cdbs dh-autoreconf valgrind apache2-utils rpm
   - mkdir -p ~/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
   - ./autogen.sh
 script:
@@ -27,6 +27,7 @@ script:
   - make dist
   - rpmbuild --define "_sourcedir `pwd`" -ba --nodeps redhat/sniproxy.spec
   - echo "Testing Debian package installation, configuration, and usage"
+  - lintian ../sniproxy_*_`dpkg --print-architecture`.deb
   - sudo dpkg -i ../sniproxy_*_`dpkg --print-architecture`.deb
   - sudo perl -pi -e 's/ENABLED=0/ENABLED=1/' /etc/default/sniproxy
   - echo -e "user daemon\n\npidfile /var/run/sniproxy.pid\n\nerror_log {\n  syslog daemon\n  priority notice\n}\n\nlisten 80 {\n  proto http\n}\n\ntable {\n  localhost *\n}" | sudo tee /etc/sniproxy.conf
