--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,13 @@ AS_IF([test "x$dns" = "xyes"],
   ])
 ])
 
+AC_ARG_ENABLE([rfc3339-timestamps],
+  [AS_HELP_STRING([--enable-rfc3339-timestamps], [Enable RFC3339 timestamps])],
+  [rfc3339_timestamps=${enableval}], [rfc3339_timestamps=no])
+
+AS_IF([test "x$rfc3339_timestamps" = "xyes"],
+    [AC_DEFINE([RFC3339_TIMESTAMP], 1, [RFC3339 timestamps enabled])])
+
 # Checks for header files.
 AC_FUNC_ALLOCA
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stddef.h stdlib.h string.h strings.h sys/socket.h sys/time.h syslog.h unistd.h],,
