Update package descriptions
Updating descriptions to match README and man page, calling attention to
the fact that SNIProxy is a layer 4 proxy not an application level
proxy.

--- a/debian/control
+++ b/debian/control
@@ -11,10 +11,11 @@ Package: sniproxy
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: logrotate
-Description: SNI Proxy
+Description: Transparent TLS and HTTP layer 4 proxy with SNI support
  Proxies incoming HTTP and TLS connections based on the hostname contained in
- the initial request. This enables HTTPS name based virtual hosting to separate
- backend servers without the installing the private key on the proxy machine.
+ the initial request of the TCP session. This enables HTTPS name-based virtual
+ hosting to separate backend servers without installing the private key on the
+ proxy machine.
 
 Package: sniproxy-dbg
 Architecture: any
