resolver: configuration support for DNS resolver

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -7,6 +7,32 @@ user nobody
 # PID file, needs to be placed in directory writable by user
 pidfile /var/tmp/sniproxy.pid
 
+# The DNS resolver is only required if tables are configured using wildcard or
+# hostname targets. By default the nameserver and search domain are loaded from
+# /etc/resolv.conf.
+resolver {
+    # Specify name server
+    #
+    # NOTE: it is strongly recommended to use a local caching DNS server, since
+    # uDNS and thus SNIProxy only uses single socket to each name server so
+    # each DNS query is only protected by the 16 bit query ID and lacks
+    # additional source port randomization. Additionally no caching is
+    # preformed within SNIProxy, so a local resolver can improve performance.
+    nameserver 127.0.0.1
+
+    # DNS search domain
+    search example.com
+
+    # Specify which type of address to lookup in DNS:
+    #
+    # * ipv4_only   query for IPv4 addresses (default)
+    # * ipv6_only   query for IPv6 addresses
+    # * ipv4_first  query for both IPv4 and IPv6, use IPv4 is present
+    # * ipv6_first  query for both IPv4 and IPv6, use IPv6 is present
+    #
+    mode ipv6_first
+}
+
 error_log {
     # Log to the daemon syslog facility
     syslog deamon
