--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -35,7 +35,7 @@ resolver {
 
 error_log {
     # Log to the daemon syslog facility
-    syslog deamon
+    syslog daemon
 
     # Alternatively we could log to file
     #filename /var/log/sniproxy.log
