Global access log

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -7,9 +7,9 @@ user nobody
 # PID file, needs to be placed in directory writable by user
 pidfile /var/tmp/sniproxy.pid
 
-# The DNS resolver is only required if tables are configured using wildcard or
-# hostname targets. By default the nameserver and search domain are loaded from
-# /etc/resolv.conf.
+# The DNS resolver is required for tables configured using wildcard or hostname
+# targets. If no resolver is specified, the nameserver and search domain are
+# loaded from /etc/resolv.conf.
 resolver {
     # Specify name server
     #
@@ -29,7 +29,6 @@ resolver {
     # * ipv6_only   query for IPv6 addresses
     # * ipv4_first  query for both IPv4 and IPv6, use IPv4 is present
     # * ipv6_first  query for both IPv4 and IPv6, use IPv6 is present
-    #
     mode ipv6_first
 }
 
@@ -44,25 +43,34 @@ error_log {
     priority notice
 }
 
+# Global access log for all listeners
+access_log {
+    # Same options as error_log
+    filename /tmp/sniproxy-access.log
+}
+
 # blocks are delimited with {...}
 listen 80 {
     proto http
     table http_hosts
-    # Fallback backend server to use if we can not parse the client request
+
+    # Fallback server to use if we can not parse the client request
     fallback localhost:8080
 
-    # Specify the source address for outgoing connections
-    # This address must be configured on the host
+    # Specify the source address for outgoing connections.
+    #
+    # Do not include a port in this address, otherwise you will be limited
+    # to a single connection to each backend server.
+    #
     # NOTE: using this option prevents the operating system from selecting
     # and source address and port optimally and may significantly reduce the
     # maximum number of simultaneous connections possible.
-    # Do not include a port in this address, otherwise you will be limited
-    # to a single connection to each backend server.
     source 192.0.2.10
 
     # Log the content of bad requests
     #bad_requests log
 
+    # Override global access log for this listener
     access_log {
         # Same options as error_log
         filename /tmp/sniproxy.log
@@ -116,15 +124,14 @@ table http_hosts {
 # named tables are defined with the table directive
 table https_hosts {
     # When proxying to local sockets you should use different tables since the
-    # local socket server most likely will not autodetect which protocol is
-    # being used
+    # local socket server most likely will not detect which protocol is being
+    # used
     example.org unix:/var/run/server.sock
 }
 
 # if no table specified the default 'default' table is defined
 table {
-    # if no port is specified default HTTP (80) and HTTPS (443) ports are
-    # assumed based on the listening port of each listener using this table
+    # If no port is specified the port of the incoming listener is used
     example.com 192.0.2.10
     example.net 192.0.2.20
 }
