Add fallback test
Test fallback behavior. Abstract out the response generator from
TestHTTPD so it can be used for the normal and fallback server.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -10,6 +10,7 @@ TESTS = http_test \
         functional_test \
         bad_request_test \
         slow_client_test \
+		fallback_test \
         reload_test \
         connection_reset_test \
         bind_source_test \
