Bind device for some platform using SO_BINDTODEVICE, root required.

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -67,6 +67,12 @@ listen 80 {
     # maximum number of simultaneous connections possible.
     source 192.0.2.10
 
+    # Bind device for outgoing connections
+    #
+    # This is not available for all platforms.
+    # Root is required for SO_BINDTODEVICE
+    #device eth1
+
     # Log the content of bad requests
     #bad_requests log
 
