Added support for PROXY v1 header generation

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -74,6 +74,15 @@ listen 80 {
     # reduce the maximum number of simultaneous connections possible.
     source 192.0.2.10
 
+    # Generate PROXY v1 header for client requests.
+    #
+    # These headers contain the client's source and destination IP, and may be
+    # used as an alternative to transparent proxy where it is not supported.
+    #
+    # This header is generated according to Haproxy PROXY v1 header
+    # specification, and is compatible with servers such as Nginx and ocserv.
+    #proxy_header yes
+
     # Log the content of bad requests
     #bad_requests log
 
