proxy header: use proxy_protocol in config syntax
Use 'proxy_protocol' as table backend option rather than just 'proxy'
this is less ambiguous in the context of a proxy and matches Nginx
configuration option name.

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -118,7 +118,7 @@ listen unix:/var/run/proxy.sock {
 table http_hosts {
     example.com 192.0.2.10:8001
     example.net 192.0.2.10:8002
-    example.org 192.0.2.10:8003
+    example.org 192.0.2.10:8003 proxy_protocol
 
 # Each table entry is composed of three parts:
 #
