Add DTLS functional test
This adds a DTLS functional test, similar to the existing TLS functional
test. For now, this has a single known good DTLS packet which we run the
test against. More can be added as Wireshark captures allow.

Signed-off-by: Kyle Mestery <mestery@mestery.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -7,6 +7,7 @@ TESTS = address_test \
         table_test \
         http_test \
         tls_test \
+        dtls_test \
         binder_test
 
 TESTS += functional_test \
@@ -29,6 +30,7 @@ endif
 
 check_PROGRAMS = http_test \
                  tls_test \
+                 dtls_test \
                  table_test \
                  binder_test \
                  buffer_test \
@@ -42,6 +44,12 @@ http_test_SOURCES = http_test.c \
 
 tls_test_SOURCES = tls_test.c \
                    ../src/tls.c \
+                   ../src/sni.c \
+                   ../src/logger.c
+
+dtls_test_SOURCES = dtls_test.c \
+                   ../src/dtls.c \
+                   ../src/sni.c \
                    ../src/logger.c
 
 binder_test_SOURCES = binder_test.c \
@@ -74,6 +82,8 @@ config_test_SOURCES = config_test.c \
                       ../src/resolv.c \
                       ../src/resolv.h \
                       ../src/tls.c \
+                      ../src/dtls.c \
+                      ../src/sni.c \
                       ../src/http.c
 
 config_test_LDADD = $(LIBEV_LIBS) $(LIBPCRE_LIBS) $(LIBUDNS_LIBS)
