Added statuslistener. This makes it possible to get a list of active connections without the need to search trough temp files.

--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -8,6 +8,11 @@ group nogroup
 # PID file, needs to be placed in directory writable by user
 pidfile /var/run/sniproxy.pid
 
+# This will return a list of connections that aren't in the access_log yet.
+# It doesn't matter what request you send, it will always repond with a http ok
+# header followed by the list
+statuslistener 8080
+
 # The DNS resolver is required for tables configured using wildcard or hostname
 # targets. If no resolver is specified, the nameserver and search domain are
 # loaded from /etc/resolv.conf.
