--- a/configure.ac
+++ b/configure.ac
@@ -14,7 +14,7 @@ AM_PROG_CC_C_O
 
 # Checks for libraries.
 AC_CHECK_LIB([ev], [ev_run])
-AC_CHECK_LIB([pcre], [pcre_exec])
+AC_CHECK_LIB([pcre2-8], [pcre2_config_8])
 
 AC_ARG_ENABLE([dns],
   [AS_HELP_STRING([--enable-dns], [Enable DNS resolution])])
